--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
 	}],
 	"require": {
 		"php": ">=7.4",
-        "silverstripe/vendor-plugin": "~1.0 || ~2.0",
-        "silverstripe/framework": "~4.11 || ~5.0"
+        "silverstripe/vendor-plugin": "~2.0",
+        "silverstripe/framework": "~5.0"
 	},
 	"autoload": {
 		"psr-4": {
