--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,7 @@
 		"homepage": "https://fromhold.io"
 	}],
 	"require": {
-		"php": ">=7.4",
-        "silverstripe/vendor-plugin": "~2.0",
-        "silverstripe/framework": "~5.0"
+        "sheadawson/silverstripe-dependentdropdownfield": "^4"
 	},
 	"autoload": {
 		"psr-4": {
